[package]
name = "rsafe"
version = "0.0.1"
authors = ["wrnice"]

[dependencies]
sodiumoxide = "0.0.10"
rustc-serialize = "0.3.18"
base64 = "0.1.1"
url = "0.5.9"
request = "0.0.8"


[lib]
name = "rsafe"
src = "src/lib.rs"

[[example]]
name = "rsafeclient"
path = "examples/rsafeclient.rs"

[[example]]
name = "rsafeclient_dns"
path = "examples/rsafeclient_dns.rs"
